@@ -1,2 +1,1 @@
-DIST declarative_authorization-0.5.6.gem 75264 SHA256 e7d8874251e4c2abf90f2006a1bc4afc7234019e80d9fa2972ce5249c80ea13a SHA512 777dc2957d283fe14caaac606b1ca797fc876016b3a68dcc59779553488a88fbf06847729fa06c3d12475b3da07fd98152a5aa7f08f7b3f74a04bca1208656a0 WHIRLPOOL f4aaa8da857a99a74224142b6532c154fa90043ec7c9fb534320bbb7457704bf67d4dfab95a3c592ccf5f6e9ad063a72fa5090152c0493dd6167a24119d5b6dd
 DIST declarative_authorization-0.5.7.gem 75264 SHA256 3c8bdc1cd52c3e4a5522722dc2a258f63a5efdc2919390fc398587e0e1ddc3cd SHA512 4c86a7d304f9000d999732130750d26e7ccaa5c72b54aa61d600f41ec693191427701c5fefe8580bd528bd959e12a5e8580877bb0f43d2af9f60cde87f374e2f WHIRLPOOL 5cfea01032dd19a5cebf8f7e685c0c3a99ac9f8ee491d1d35a746c6ee664d0bab5583382fe5fc7c041fe4c0ce2d3ba5ba0e82c17e5e630adad886efe4539615f
