@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/declarative_authorization
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jun 2015; Hans de Graaff <graaff@gentoo.org>
+  -declarative_authorization-0.5.6.ebuild:
+  Cleanup.
 
 *declarative_authorization-0.5.7 (24 Oct 2013)
 
